tests/Fixtures/Torture/Bad/missing_return.g
// EXPECT G027
kernel { entry func Main() { } int func f() { } }
